--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
     "gulp-uglify": "^2.1.2",
     "jshint": "^2.9.4",
     "typescript": "^2.3.2"
+  },
+  "dependencies": {
+    "typescript-collections": "^1.2.3"
   }
 }
