--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "gulp-concat": "^2.6.1",
     "gulp-jshint": "^2.0.4",
     "gulp-rename": "^1.2.2",
+    "gulp-rollup": "^2.11.0",
     "gulp-sass": "^3.1.0",
     "gulp-typescript": "^3.1.6",
     "gulp-uglify": "^2.1.2",
     "jshint": "^2.9.4",
+    "rollup-plugin-typescript": "^0.8.1",
     "typescript": "^2.3.2"
   },
   "dependencies": {
