--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/lerio29/navalBattle#readme",
   "devDependencies": {
+    "@types/jsdom": "^2.0.30",
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.1",
     "gulp-jshint": "^2.0.4",
@@ -30,6 +31,7 @@
     "typescript": "^2.3.2"
   },
   "dependencies": {
+    "jsdom": "^11.0.0",
     "typescript-collections": "^1.2.3"
   }
 }
