--- a/package.json
+++ b/package.json
@@ -17,8 +17,6 @@
   },
   "homepage": "https://github.com/lerio29/navalBattle#readme",
   "devDependencies": {
-    "@types/jquery": "^2.0.45",
-    "@types/jsdom": "^2.0.30",
     "browserify": "^14.3.0",
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.1",
@@ -33,6 +31,10 @@
     "vinyl-source-stream": "^1.1.0"
   },
   "dependencies": {
+    "@types/angular": "^1.6.32",
+    "@types/jquery": "^2.0.45",
+    "@types/jsdom": "^2.0.30",
+    "angular": "^1.6.6",
     "jquery": "^3.2.1",
     "jsdom": "^11.0.0",
     "typescript-collections": "^1.2.3"
