--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "typescript-collections": "^1.3.2"
   },
   "dependencies": {
-    "@types/winston": "^2.3.8",
-    "winston": "^2.4.0"
+    "@types/chalk": "^2.2.0",
+    "chalk": "^2.3.1"
   }
 }
