--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "dist/js/index.js",
   "types": "dist/definitions/index.d.ts",
   "scripts": {
+    "doces6": "./node_modules/typedoc/bin/typedoc --module commonjs --target es6  --out ./doc/ ./src/*.ts",		  
+    "doces5": "./node_modules/typedoc/bin/typedoc --module commonjs --target es5  --out ./doc/ ./src/*.ts",       
     "test": "./node_modules/mocha/bin/mocha  --reporter spec --require ts-node/register ./test/*.spec.ts"
   },
   "repository": {
@@ -42,6 +44,7 @@
     "ts-node": "^4.1.0",
     "tsify": "^3.0.1",
     "tslint": "^5.9.1",
+    "typedoc": "^0.10.0",
     "typescript": "^2.3.2",
     "typescript-collections": "^1.3.2"
   },
