--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "dist/js/index.js",
   "types": "dist/definitions/index.d.ts",
   "scripts": {
-    "doces6": "./node_modules/typedoc/bin/typedoc --module commonjs --target es6  --out ./doc/ ./src/*.ts",		  
-    "doces5": "./node_modules/typedoc/bin/typedoc --module commonjs --target es5  --out ./doc/ ./src/*.ts",       
+    "doces6": "./node_modules/typedoc/bin/typedoc --module commonjs --target es6  --out ./doc/ ./src/*.ts",
+    "doces5": "./node_modules/typedoc/bin/typedoc --module commonjs --target es5  --out ./doc/ ./src/*.ts",
     "test": "./node_modules/mocha/bin/mocha  --reporter spec --require ts-node/register ./test/*.spec.ts"
   },
   "repository": {
@@ -39,6 +39,7 @@
     "merge2": "^1.2.1",
     "mocha": "^5.0.1",
     "semserver": "^1.0.0",
+    "semver": "^5.5.0",
     "sinon": "^4.3.0",
     "sinon-chai": "^2.14.0",
     "ts-node": "^4.1.0",
