--- a/package.json
+++ b/package.json
@@ -51,6 +51,8 @@
   },
   "dependencies": {
     "@types/chalk": "^2.2.0",
-    "chalk": "^2.3.1"
+    "@types/sha1": "^1.1.1",
+    "chalk": "^2.3.1",
+    "sha1": "^1.1.1"
   }
 }
