--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "semver": "^5.5.0",
     "sinon": "^4.3.0",
     "sinon-chai": "^2.14.0",
+    "ts-mockito": "^2.3.0",
     "ts-node": "^4.1.0",
     "tsify": "^3.0.1",
     "tslint": "^5.9.1",
