--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
   "homepage": "https://github.com/lerio29/navalBattle#readme",
   "devDependencies": {
     "@types/chai": "^4.1.2",
+    "@types/faker": "^4.1.2",
     "@types/mocha": "^2.2.48",
     "@types/sinon": "^4.1.3",
     "chai": "^4.1.2",
     "chai-as-promised": "^7.1.1",
     "chai-http": "^3.0.0",
+    "faker": "^4.1.0",
     "gulp": "^3.9.1",
     "gulp-clean": "^0.4.0",
     "gulp-concat": "^2.6.1",
@@ -42,7 +44,6 @@
     "semver": "^5.5.0",
     "sinon": "^4.3.0",
     "sinon-chai": "^2.14.0",
-    "ts-mockito": "^2.3.0",
     "ts-node": "^4.1.0",
     "tsify": "^3.0.1",
     "tslint": "^5.9.1",
