--- a/package.json
+++ b/package.json
@@ -9,6 +9,17 @@
     "doces5": "./node_modules/typedoc/bin/typedoc --module commonjs --target es5  --out ./doc/ ./src/*.ts",
     "test": "./node_modules/mocha/bin/mocha  --reporter spec --require ts-node/register ./test/*.spec.ts"
   },
+  "keywords": [
+      "battleShip",
+      "typescript",
+      "game",
+      "library",
+      "module",
+      "engine",
+      "dependencies",
+      "spaceship",
+      "tools"
+],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/lerio29/navalBattle.git"
