--- a/package.json
+++ b/package.json
@@ -64,8 +64,11 @@
   },
   "dependencies": {
     "@types/chalk": "^2.2.0",
+    "@types/load-json-file": "^2.0.7",
     "@types/sha1": "^1.1.1",
     "chalk": "^2.3.1",
+    "json2typescript": "^1.0.5",
+    "load-json-file": "^4.0.0",
     "sha1": "^1.1.1"
   }
 }
